--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-09 Hasbullah Bin Pit <sebol@my-penguin.org>
+
+	* ms.po: Updated Malay translation.
+
 2004-11-08  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
