--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-09  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-11-09 Hasbullah Bin Pit <sebol@my-penguin.org>
 
 	* ms.po: Updated Malay translation.
