More manpage fixes.
2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(parser_handle_linetag), (parser_handle_row_options),
	(parser_parse_table): More manpage fixes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-13  James Bowes  <bowes@cs.dal.ca>
+
+	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
+	(parser_handle_linetag), (parser_handle_row_options),
+	(parser_parse_table): More manpage fixes.
+
 2004-11-13  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html.xsl.in:
