More manpage fixing, including better handling of using hanging tag
2004-11-13  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(parser_parse_line), (parser_handle_linetag): More
	manpage fixing, including better handling of using
	hanging tag paragraphs as list items.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2004-11-13  James Bowes  <bowes@cs.dal.ca>
 
 	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
+	(parser_parse_line), (parser_handle_linetag): More 
+	manpage fixing, including better handling of using 
+	hanging tag paragraphs as list items.
+
+2004-11-13  James Bowes  <bowes@cs.dal.ca>
+
+	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
 	(parser_handle_linetag), (parser_handle_row_options),
 	(parser_parse_table): More manpage fixes.
 
