Fix build out of src directory. Bug #158328
2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>

        * data/Makefile.am:

        Fix build out of src directory. Bug #158328

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>
+
+	* data/Makefile.am:
+
+	Fix build out of src directory. Bug #158328	
+
 2004-11-16  James Bowes  <bowes@cs.dal.ca>
 
 	reviewed by: Shaun McCance  <shaunm@gnome.org>
